--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "youtube-desktop",
   "version": "1.0.0",
-  "description": "Simple YouTube Desktop Electron App",
+  "productName": "YouTube Desktop",
+  "description": "A simple YouTube Desktop application, built using Electron,js",
   "main": "main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -13,12 +14,10 @@
     "url": "https://github.com/mikepruett3/youtube-desktop"
   },
   "keywords": [
-    "Youtube",
-    "Desktop",
     "Electron",
-    "app"
+    "Youtube"
   ],
-  "author": "Mike Pruett",
+  "author": "Mike Pruett <mikepruett3@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.5",
