--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-desktop",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "productName": "YouTube Desktop",
   "description": "A simple YouTube Desktop application, built using Electron.js",
   "main": "main.js",
@@ -8,27 +8,39 @@
     "test": "electron .",
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mikepruett3/youtube-desktop"
+    "url": "https://github.com/mikepruett3/youtube-desktop.git"
   },
   "keywords": [
     "Electron",
     "Youtube"
   ],
-  "author": "Mike Pruett <mikepruett3@gmail.com>",
+  "author": {
+    "name": "Mike Pruett",
+    "email": "mikepruett3@gmail.com"
+  },
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mikepruett3/youtube-desktop/issues"
+  },
+  "homepage": "https://github.com/mikepruett3/youtube-desktop#readme",
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.5",
-    "@electron-forge/maker-deb": "^6.0.5",
-    "@electron-forge/maker-rpm": "^6.0.5",
-    "@electron-forge/maker-squirrel": "^6.0.5",
-    "@electron-forge/maker-zip": "^6.0.5",
+    "@electron-forge/cli": "^6.2.1",
+    "@electron-forge/maker-deb": "^6.2.1",
+    "@electron-forge/maker-rpm": "^6.2.1",
+    "@electron-forge/maker-squirrel": "^6.2.1",
+    "@electron-forge/maker-zip": "^6.2.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
+    "@electron-forge/publisher-github": "^6.2.1",
     "electron": "^23.1.1"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-prompt": "^1.7.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.1.0"
   }
 }
