--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 18
+        architecture: 'x64'
     - name: install dependencies
       run: npm install
     - name: build
@@ -17,10 +18,11 @@ jobs:
   build_on_mac:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: 18
+        architecture: 'x64'
     - name: install dependencies
       run: npm install
     - name: build
@@ -33,6 +35,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 18
+        architecture: 'x64'
     - name: install dependencies
       run: npm install
     - name: build
