--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 18
+        architecture: 'x64'
     - name: install dependencies
       run: npm install
     - name: publish
@@ -22,10 +23,11 @@ jobs:
   publish_on_mac:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: 18
+        architecture: 'x64'
     - name: install dependencies
       run: npm install
     - name: publish
@@ -40,6 +42,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 18
+        architecture: 'x64'
     - name: install dependencies
       run: npm install
     - name: publish
