--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-desktop",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "productName": "YouTube Desktop",
   "description": "A simple YouTube Desktop application, built using Electron.js",
   "main": "main.js",
@@ -37,7 +37,8 @@
     "@electron-forge/maker-zip": "^6.2.1",
     "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
     "@electron-forge/publisher-github": "^6.2.1",
-    "electron": "^23.1.1"
+    "electron": "^23.1.1",
+    "electron-forge-maker-appimage": "github:Marcus10110/electron-forge-maker-appimage"
   },
   "dependencies": {
     "electron-prompt": "^1.7.0",
