--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "youtube-desktop",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "productName": "YouTube Desktop",
   "description": "A simple YouTube Desktop application, built using Electron.js",
   "main": "main.js",
   "scripts": {
-    "test": "electron .",
+    "test": "electron --trace-warnings .",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
@@ -29,20 +29,22 @@
   },
   "homepage": "https://github.com/mikepruett3/youtube-desktop#readme",
   "devDependencies": {
-    "@electron-forge/cli": "^6.2.1",
-    "@electron-forge/maker-deb": "^6.2.1",
-    "@electron-forge/maker-dmg": "^6.2.1",
-    "@electron-forge/maker-rpm": "^6.2.1",
-    "@electron-forge/maker-squirrel": "^6.2.1",
-    "@electron-forge/maker-zip": "^6.2.1",
-    "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
-    "@electron-forge/publisher-github": "^6.2.1",
-    "electron": "^23.1.1",
+    "@electron-forge/cli": "^7",
+    "@electron-forge/maker-deb": "^7",
+    "@electron-forge/maker-dmg": "^7",
+    "@electron-forge/maker-rpm": "^7",
+    "@electron-forge/maker-squirrel": "^7",
+    "@electron-forge/maker-zip": "^7",
+    "@electron-forge/plugin-auto-unpack-natives": "^7",
+    "@electron-forge/publisher-github": "^7",
+    "electron": "^33.0.2",
     "electron-forge-maker-appimage": "github:Marcus10110/electron-forge-maker-appimage"
   },
   "dependencies": {
+    "@ghostery/adblocker-electron": "^2.3.1",
+    "cross-fetch": "^4.1.0",
     "electron-prompt": "^1.7.0",
-    "electron-squirrel-startup": "^1.0.0",
+    "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^8.1.0"
   }
 }
